# spectrogram-zeros-classification

./: McSyntheticMixture_512.mat  README.md  alto.mat  batsig.mat  cello.mat  classified_zeros_denoising.m  classify_spectrogram_zeros.m  compute_centroids.m  compute_zeros_histogram.m  detection_performance_results_matrix.mat  determine_true_class_2.m  fig10_qrf_with_three_tones.m  fig1_noise_spectrogram_level_set.m  fig2_movement_of_zeros.m  fig3_2d_histograms_of_zeros.m  fig4_and_fig7a_example_parallel_chirps.m  fig5_and_figs9ab_triple_tone_triangles.m  fig6_determination_of_parameters.m  fig7b_example_mixture.m  fig7c_example_one_chirp.m  fig8_bat_signal.m  fig9a_example_one_chirp.m  fig9c_example_parallel_tones.m  mask_DT_155.mat  mask_DT_165.mat  mask_DT_170.mat  mask_DT_175.mat  mask_DT_180.mat  mask_DT_185.mat  mask_DT_195.mat  params_K_100_M_512_beta_TONES_KMEANS_shannon.mat  print_figure.m  results_J_1024_detection_performance.mat  table_2_detection_performance_study.m  variables_K_200_LABELING_B_TONES_ESTIMATE_SNR_plain_estimator_nclust_1_2_and_3_shannon.mat
detection_tests/: README.md  detection_spectrogram_zeros.ipynb  detection_spectrogram_zeros_results.ipynb  noise_matrix.mat  pyproject.toml  results  results.csv  spatstats_utils.py  utilstf.py
sup_material/: setting_parameters.m
